# ACTIVIDAD_3_ARQUITECTURA_DE_SOFTWARE

./: .env.api_gateway  .env.autores  .env.frontend  .env.publicaciones  .gitignore  README.md  docker-compose.yaml
api_gateway/: .env.example  app_conf.py  main.py  pyproject.toml  referencia_arquitectura_microservicos.md  requirements.txt
autores/: .dockerignore  .env.example  Dockerfile  README.md  pom.xml
autores/src/main/resources/: application.yaml
bpm/: BPMN_Publicaciones_Quilumbaquin_Pillisa_Alan_David.bpmn
front_end/: .env.example  Dockerfile  README.md  package-lock.json  package.json  referencia_arquitectura_microservicos.md
front_end/src/: App.tsx  main.tsx
front_end/src/components/: MenuBar.tsx
front_end/src/pages/: AutoresPage.tsx  HomePage.tsx  NotFoundPage.tsx  PublicacionesPage.tsx
front_end/src/routes/: MainRoutes.tsx
front_end/src/services/: api.ts  autoresService.ts  publicacionesService.ts
front_end/src/styles/: App.css  index.css
front_end/src/types/: index.ts
publicaciones/: .env.example  Dockerfile  README.md  app_conf.py  main.py  pyproject.toml  requirements.txt
publicaciones/src_publicaciones/controllers/: publicacion_router.py
publicaciones/src_publicaciones/database/: db.py
publicaciones/src_publicaciones/dtos/: publicacion_dto.py
publicaciones/src_publicaciones/models/: ProduccionIntelectual.py  Publicacion.py
publicaciones/src_publicaciones/repositories/: publicacion_repository.py
publicaciones/src_publicaciones/services/: publicacion_service.py  publicacion_service_impl.py
(+9 files in other folders)
