[project]
name = "src_publicaciones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv]
package = true